build-logs-failed/build-kdt-0.2.6.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - kdt-0.2.6 (lib) (first run)
 - kdt-0.2.6 (test:StaticTest) (first run)
 - kdt-0.2.6 (test:DynamicTest) (first run)
Configuring library for kdt-0.2.6...
Preprocessing library for kdt-0.2.6...
Building library for kdt-0.2.6...
[1 of 4] Compiling Data.KdMap.Static

lib-src/Data/KdMap/Static.hs:221:15: warning: [GHC-62161] [-Wincomplete-uni-patterns]
    Pattern match(es) are non-exhaustive
    In a pattern binding:
        Patterns of type ‘([a], (p, v))’ not matched: ([], _)
    |
221 |               (medianAxisVal : _, _) =
    |               ^^^^^^^^^^^^^^^^^^^^^^^^...
[2 of 4] Compiling Data.KdMap.Dynamic
[3 of 4] Compiling Data.KdTree.Dynamic
[4 of 4] Compiling Data.KdTree.Static
Configuring test suite 'StaticTest' for kdt-0.2.6...
Preprocessing test suite 'StaticTest' for kdt-0.2.6...
Building test suite 'StaticTest' for kdt-0.2.6...
[1 of 2] Compiling Data.Point2d
[2 of 2] Compiling Main

app-src/Tests/StaticTest.hs:18:1: error:
    Could not find module ‘Tests.TestHelpers’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
18 | import Tests.TestHelpers (nearestsLinear, withinDistanceOfKthNearest)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:StaticTest from kdt-0.2.6.

